# gremlin

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
spec/: spec_helper.rb
spec/integration/: local_files_spec.rb
src/: cli.rs  collections.rs  config.rs  crc32.rs  db.rs  error.rs  events.rs  fswork.rs  import.rs  main.rs  root_snapshot.rs  sfv.rs  sfv_verify.rs  targets.rs  transfer.rs  tui.rs  util.rs
src/remote_helper/: engine.rs  framing.rs  mod.rs  protocol.rs  session.rs  ssh.rs
src/transfer/: events.rs  io.rs  local.rs  mod.rs  paths.rs  plan.rs  run.rs  ssh.rs  tests.rs
src/tui/: app.rs  collection_actions.rs  detail.rs  events_view.rs  files.rs  hints.rs  import_actions.rs  jobs.rs  mod.rs  navigation.rs  plan_actions.rs  plan_view.rs  root_actions.rs  roots.rs  screen.rs  tests.rs  theme.rs  transfer_source.rs
tests/: cli_json.rs
