[package]
name = "gremlin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
md5 = "0.8"
ratatui = "0.30"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
